# Haan

./: .gitignore  PERSONA.md  PROJECT.md  README.md  haan_warm_start.ipynb  moshi_family_test.ipynb  moshi_tts.py  personaplex_test.ipynb  pyproject.toml  test_moshi.ipynb  test_personaplex.ipynb  text_only_preprobe.ipynb  text_only_preprobe_3 (1).ipynb  voice_clone_moshi_vq_prompt.ipynb
.omx/state/: session.json
ai_ui/: ai_critique.json.txt  aiui.html  상담사UI_프롬프트.md
ai_ui/advisor-app/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
configs/: tokens.yaml
configs/data/: filter.yaml  loader.yaml  mimi_silence.json  prepare.yaml  text_tok.yaml
data_pipeline/: prepare_dataset.py  schema.py
data_pipeline/datasets/: __init__.py  __main__.py  base.py  en_kd_dataset.py  en_solo_dataset.py  mixins.py  seed_prompt_dataset.py  text_anchor_dataset.py
docs/contexts/: ARCHITECTURE.md  DATA_STRATEGY.md  FUTURE.md  KERNELS.md  RISKS_AND_DIAGNOSTICS.md  SERVICE_ARCHITECTURE.md  TRAINING_CURRICULUM.md
docs/plans/: MOSHI_KD_DATASET_PLAN.md
notebooks/: selfplay.ipynb
project_amnesty/: __init__.py
project_amnesty/datasets/: __init__.py  __main__.py  base.py  collator.py  common_voice_ko_dataset.py  config.py  css10_ko_dataset.py  dataset.py  en_kd_dataset.py  en_solo_dataset.py  item.py  kd_align.py  kss_dataset.py  loader.py  mixins.py  personaplex_colab.ipynb  prepare.py  prepare_dataset.py  sampler.py  schema.py  seed_prompt_dataset.py  text_anchor_dataset.py  text_collator.py  voice_clone_moshi_vq_prompt.ipynb  zeroth_ko_dataset.py
project_amnesty/losses/: kd.py
project_amnesty/models/: __init__.py  configuration_haan.py  modeling_haan.py  processing_haan.py
server/: README.md  package.json  server.js
server/lib/: scenario.js  (+2 more)
tests/: conftest.py  test_collator.py  test_config_tokens.py  test_data_pipeline.py  test_dataset.py  test_derive_silence.py  test_kd_integration.py  test_kd_loss.py  test_loader.py  test_prepare.py  test_sampler.py  test_silence_bank.py  test_text_align.py
user_ui/: ClaudeCode_인수인계_요구사항.md  user.html  user_critique.json.txt
(+105 files in other folders)
