[project]
name = "haan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers>=5.14.1",
    "datasets>=5.0.0",
    "kernels>=0.16.0",
    "soundfile>=0.14.0",
    "scipy>=1.18.0",
    "sentencepiece>=0.2.2",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "ipykernel>=7.3.0",
    "jupyter-client>=8.9.1",
    "matplotlib>=3.11.0",
    "torchaudio>=2.11.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]
torchaudio = [
    { index = "pytorch-cu126" },
]

[tool.uv.extra-build-dependencies]
flash-attn = [ "torch" ]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
markers = [
    "slow: loads a real model or otherwise takes seconds; deselect with -m 'not slow'",
]
